# pcrawler

./: .dockerignore  .gitignore  .~lock.e164_fast_data.xlsx#  CIRCUIT_BREAKER_HEALTH_MONITOR_README.md  Dockerfile  Makefile  OPTIMIZATION_SUMMARY.md  README.md  cleanup_duplicates.py  docker-compose-n8n.yml  docker-compose.yml  merge_files.py  migrate_contact_unique.py  migrate_server.sh  n8n-docker-setup.md  pyproject.toml  requirements.txt  run_crawler.sh  server-deployment.md
app/: main.py  main_backup.py
app/crawler/: async_context_manager.py  backup_crawler.py  base_crawler.py  browser_defender.py  contact_crawler.py  contact_db_crawler.py  detail_crawler.py  detail_db_crawler.py  html_crawler.py  list_crawler.py
app/database/: db_manager.py  migrate_unique_constraints.py  schema.sql
app/extractor/: company_details_extractor.py  crawl4ai_email_extractor.py  db_email_extractor.py  email_extractor.py
app/tasks/: celery_app.py  html_tasks.py  tasks.py
app/tools/: e164_phone_normalizer.py
app/utils/: batching_writer.py  circuit_breaker.py  dedup_cleanup.py  error_handler.py  health_monitor.py
config/: README.md  __init__.py  crawler_config.py
config/configs/: 1900comvn.yml  default.yml  example.yml
data/: crawler.db
tests/: test_config.py
